--- a/index.html
+++ b/index.html
@@ -12,70 +12,70 @@
     </span>
     <table>
         <tr>
-            <!--Activite-->
+            <!--Activite01-->
             <td>
                 <div>
-                    <a href="./Activite1/active1.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite1/active1.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite1 (seance1)">Activite1</h2>
                     <a href="./Activite1/Activite1.zip" download="Activite1"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
-            <!--Activite-->
+            <!--Activite02-->
             <td>
                 <div>
-                    <a href="./Activite2/active2.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite2/active2.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite2 (seance1)">Activite2</h2>
-                    <a href="/Activite2/Activite2.zip" download="Activite2"><input type="button" value="Télécharger"></a>
+                    <a href="./Activite2/Activite2.zip" download="Activite2"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
-            <!--Activite-->
+            <!--Activite03-->
             <td>
                 <div>
-                    <a href="./Activite3/active3.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite3/active3.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite3 (seance1)">Activite3</h2>
-                    <a href="/Activite3/Activite3.zip" download="Activite3"><input type="button" value="Télécharger"></a>
+                    <a href="./Activite3/Activite3.zip" download="Activite3"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
-            <!--Activite-->
+            <!--Activite04-->
             <td>
                 <div>
-                    <a href="./Activite4/active4.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite4/active4.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite4 (seance1)">Activite4</h2>
-                    <a href="/Activite4/Activite4.zip" download="Activite4"><input type="button" value="Télécharger"></a>
+                    <a href="./Activite4/Activite4.zip" download="Activite4"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
         </tr>
         <tr>
-            <!--Activite-->
+            <!--Activite05-->
             <td>
                 <div>
-                    <a href="./Activite5/active5.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite5/active5.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite5 (seance1)">Activite5</h2>
-                    <a href="/Activite5/Activite5.zip" download="Activite5"><input type="button" value="Télécharger"></a>
+                    <a href="./Activite5/Activite5.zip" download="Activite5"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
-            <!--Activite-->
+            <!--Activite06-->
             <td>
                 <div>
-                    <a href="./Activite6/Activet1.html"  target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite6/Activet1.html"  target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite1 (seance2)">Activite6</h2>
-                    <a href="/Activite6/Activite6.zip" download="Activite6"><input type="button" value="Télécharger"></a>
+                    <a href="./Activite6/Activite6.zip" download="Activite6"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
-            <!--Activite-->
+            <!--Activite07-->
             <td>
                 <div>
-                    <a href="./Activite7/Activet2.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite7/Activet2.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite2 (seance2)">Activite7</h2>
-                    <a href="/Activite7/Activite7.zip" download="Activite7"><input type="button" value="Télécharger"></a>
+                    <a href="./Activite7/Activite7.zip" download="Activite7"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
             <!--Activite08-->
             <td>
                 <div>
-                    <a href="./Activite8/Activet3.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite8/Activet3.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite3 (seance2)">Activite8</h2>
-                    <a href="/Activite8/Activite8.zip" download="Activite8"><input type="button" value="Télécharger"></a>
+                    <a href="./Activite8/Activite8.zip" download="Activite8"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
         </tr>
@@ -83,33 +83,33 @@
             <!--Activite09-->
             <td>
                 <div>
-                    <a href="./Activite9/Activet4.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite9/Activet4.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite4 (seance2)">Activite9</h2>
-                    <a href="/Activite9/Activite9.zip" download="Activite9"><input type="button" value="Télécharger"></a>
+                    <a href="./Activite9/Activite9.zip" download="Activite9"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
             <!--Activite10-->
             <td>
                 <div>
-                    <a href="./Activite10/Activet5.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite10/Activet5.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite5 (seance2)">Activite10</h2>
-                    <a href="/Activite10/Activite10.zip" download="Activite10"><input type="button" value="Télécharger"></a>
+                    <a href="./Activite10/Activite10.zip" download="Activite10"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
             <!--Activite11-->
             <td>
                 <div>
-                    <a href="./Activite11/Activet6.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite11/Activet6.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite6 (seance2)">Activite11</h2>
-                    <a href="/Activite11/Activite11.zip" download="Activite11"><input type="button" value="Télécharger"></a>
+                    <a href="./Activite11/Activite11.zip" download="Activite11"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
             <!--Activite12-->
             <td>
                 <div>
-                    <a href="./Activite12/Activite 12.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite12/Activite 12.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite1 (seance3)">Activite12</h2>
-                    <a href="" download=""><input type="button" value="Télécharger"></a>
+                    <a href="./Activite12/Activite12.zip" download="Activite12"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
         </tr>
@@ -117,13 +117,12 @@
             <!--Activite13-->
             <td>
                 <div>
-                    <a href="./Activite13/Activite 13.html" target="_blank"><img src="images/image_logo.png" alt=""></a>
+                    <a href="./Activite13/Activite 13.html" target="_blank" title="click me"><img src="images/image_logo.png" alt=""></a>
                     <h2 title="Activite2 (seance3)">Activite13</h2>
-                    <a href="" download=""><input type="button" value="Télécharger"></a>
+                    <a href="./Activite13/Activite13.zip" download="Activite13"><input type="button" value="Télécharger"></a>
                 </div>
             </td>
         </tr>
     </table>
-    <script src="/script.js"></script>
 </body>
 </html>
